feat(email-outbox): add scope filter (tenant/global/all)

--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -1721,6 +1721,11 @@
         "scheduled": "Jadwal",
         "updated": "Diperbarui"
       },
+      "scope": {
+        "tenant": "Tenant",
+        "global": "Global",
+        "all": "Semua"
+      },
       "status": {
         "queued": "Antri",
         "sending": "Mengirim",
