--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -1678,6 +1678,11 @@
         "scheduled": "Scheduled",
         "updated": "Updated"
       },
+      "scope": {
+        "tenant": "Tenant",
+        "global": "Global",
+        "all": "All"
+      },
       "status": {
         "queued": "Queued",
         "sending": "Sending",
