--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -694,54 +694,6 @@
         "subtitle": "Coba sesuaikan filter Anda."
       }
     },
-    "superadmin": {
-      "settings": {
-        "title": "Pengaturan Platform",
-        "subtitle": "Konfigurasi Global",
-        "loading": "Memuat pengaturan...",
-        "sections": {
-          "general": "Pengaturan Umum"
-        },
-        "fields": {
-          "public_url": {
-            "label": "URL Aplikasi Publik",
-            "desc": "URL dasar untuk pengalihan, email, dan callback pembayaran (contoh: https://app.example.com)."
-          },
-          "main_domain": {
-            "label": "Domain Utama",
-            "desc": "Domain utama tempat aplikasi dihosting (contoh: example.com). Digunakan untuk validasi domain dan routing tenant."
-          },
-          "currency": {
-            "label": "Mata Uang Default",
-            "desc": "Mata uang untuk harga paket dan tampilan invoice (ISO 4217, misal: IDR, USD)."
-          },
-          "maintenance_mode": {
-            "label": "Aktifkan Mode Pemeliharaan",
-            "desc": "Saat diaktifkan, semua pengguna kecuali superadmin akan melihat halaman pemeliharaan."
-          },
-          "maintenance_message": {
-            "label": "Pesan Pemeliharaan",
-            "desc": "Pesan yang ditampilkan kepada pengguna saat mode pemeliharaan aktif."
-          }
-        },
-        "placeholders": {
-          "url": "https://...",
-          "domain": "contoh.com"
-        },
-        "categories": {
-          "general": "Umum & Pemeliharaan",
-          "auth": "Autentikasi",
-          "password": "Kebijakan Sandi",
-          "security": "Keamanan & Batas Tarif",
-          "storage": "Konfigurasi Penyimpanan",
-          "payment": "Gateway Pembayaran",
-          "alerting": "Notifikasi Error"
-        },
-        "errors": {
-          "load_failed": "Gagal memuat pengaturan"
-        }
-      }
-    },
     "users": {
       "title": "Pengguna",
       "subtitle": "Kelola pengguna global dan akses",
@@ -1215,6 +1167,10 @@
           "label": "URL Aplikasi Publik",
           "desc": "URL dasar untuk pengalihan, email, dan callback pembayaran (misal: https://app.example.com)."
         },
+        "main_domain": {
+          "label": "Domain Utama",
+          "desc": "Domain utama tempat aplikasi dihosting (contoh: example.com). Digunakan untuk validasi domain dan routing tenant."
+        },
         "currency": {
           "label": "Mata Uang Utama",
           "desc": "Mata uang untuk harga paket dan tampilan invoice (ISO 4217, misal: IDR, USD)."
@@ -1235,6 +1191,7 @@
       },
       "placeholders": {
         "url": "https://...",
+        "domain": "contoh.com",
         "public_url": "https://cdn.example.com",
         "maintenance_message": "Masukkan pesan maintenance...",
         "manual_instructions": "Silakan transfer ke salah satu rekening di bawah dan unggah bukti.",
