--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -382,6 +382,18 @@
     "admin_panel": "Panel Admin",
     "profile": "Profil",
     "logout": "Keluar"
+    ,
+    "sections": {
+      "workspace": "Workspace",
+      "help": "Bantuan",
+      "platform": "Platform",
+      "billing": "Billing",
+      "operations": "Operasional",
+      "security": "Keamanan",
+      "access": "Akses",
+      "compliance": "Kepatuhan",
+      "configuration": "Konfigurasi"
+    }
   },
   "topbar": {
     "search_placeholder": "Cari...",
